	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12016 Speed Increasing Potion: A potion which increases the moving speed of a character for a duration.
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
05/01
	* Modified the AM_TWILIGHT* skills to require 200 medicine bowls. [Skotlex]
	* Added effect of Speed Potion [Playtester]
	* Removed Kraben Card drop from G_Kraben [Playtester]
	* Fixed a typo in the Armeyer Dinze card thanks to theultramage [Playtester]
04/30
	* Changed TK_RUN's state from none to move_enable. [Skotlex]
	* Added Hellion Revenant [Playtester]
	- his skills are still missing
	* Changed chance of Demon Pungus Card and Killer Mantis Card to 10% [Playtester]
	* Final updates for Bio Lab drop rates thanks to Muad_Dib [Playtester]
	- they should be official to 99% now
	* Updated Bio Lab drop rates to Aegis X.2 thanks to Muad_Dib [Playtester]
	* Fixed the name of Wind Demon = "Fuuma" shurikens [Playtester]
04/29
	* Item ID 7344 is now called "Shinokas Case File" [Playtester]
	- when someone is making the quest please make sure the guy is called Shinokas
	* Updated drops of Bio Lab 3 MVPs [Playtester]
	- drop rate is 1/10 of the guessed values (until skills/delays are finished)
	- also fixed a typo in the item db
	* Updated drops of Bio Lab 3 mobs [Playtester]
	* Updated mob delays to current info [Playtester]
	* More fixes in the mob db [Playtester]
	- fixed more drops
	- kRO name for Goblin Steamrider is "Steam Goblin"
	* Started fixing the drops of mobs with more than 8 different items [Playtester]
	* Added new hats ViewID, thanks to Lost_Kakashi [Lupus]
	* Added new cards set 4332-4407. Thanks to virpyre,vicious_pucca,reddozen and the others ^_-
	- Fixed some bugs and typos in the new cards effects. Probably there are more [Lupus]