@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/05/01
+	* Allowed SG_FEEL memorizing the same map for all three. [Skotlex]
+	* SC_FUSION won't end when you die now. [Skotlex]
+	* Added knockback when you run into a wall during running. However
+	  position is not being refreshed on the client yet... [Skotlex]
 	* Fixed pc_disguise not allowing you to "redisguise". [Skotlex]
 	* Corrected a crash when sd is null in npc_event [Skotlex]
 	* After testing to make sure it works properly, I'm including
