@@ -4799,7 +4799,7 @@ int status_change_clear(struct block_list *bl,int type)
 		// Do not reset Xmas status when killed. [Valaris]
 		if(sc->data[i].timer == -1 ||
 			(type == 0 &&
-			(i == SC_EDP || i == SC_MELTDOWN || i == SC_XMAS || i == SC_NOCHAT)))
+			(i == SC_EDP || i == SC_MELTDOWN || i == SC_XMAS || i == SC_NOCHAT || i == SC_FUSION)))
 			continue;
 
 		status_change_end(bl, i, -1);
